# xrune

./: .gitignore  CMakeLists.txt  Changelog.md  README.md
.github/workflows/: ci.yml
apps/: xrune.cpp  xrune_play.cpp
cmake/: xruneConfig.cmake.in
cmake/Modules/: FindCsound.cmake
data/: faustlib.json
editors/: README.md
editors/vim/: README.md  install.sh
editors/vim/ftdetect/: galdr.vim  xrune.vim
editors/vim/ftplugin/: galdr.vim  xrune.vim
editors/vim/indent/: galdr.vim  xrune.vim
editors/vim/syntax/: galdr.vim  xrune.vim
editors/vscode/: README.md  build_vsix.sh  galdr-lang-0.1.0.vsix  xrune-lang-0.1.0.vsix
editors/vscode/galdr-lang/: language-configuration.json  package.json
editors/vscode/xrune-lang/: package.json
editors/vscode/xrune-lang/syntaxes/: xrune.tmLanguage.json
examples/: drone.rune  mod_drone.rune
examples/faust/: gain.dsp
include/xrune/: api.hpp  blueprint.hpp  engine.hpp  instance.hpp  instance_manager.hpp  schedule.hpp  serialize.hpp
include/xrune/audio/: offline_backend.hpp  rtaudio_backend.hpp
include/xrune/lang/: compile.hpp  faust_registry.hpp  lower.hpp  node_registry.hpp
include/xrune/lang/parser/: ast.hpp  diagnostic.hpp  lexer.hpp  parser.hpp  token.hpp
include/xrune/node/: fft.hpp  multirate.hpp  standard_nodes.hpp
include/xrune/node/faust/: faust_common.hpp  faust_jit.hpp  faust_lib.hpp  faust_static.hpp
include/xrune/util/: arena.hpp  json.hpp  worker_pool.hpp
src/: api.cpp  api.hpp  arena.hpp  audio_backend.hpp  blueprint.hpp  core.hpp  engine.cpp  engine.hpp  galdr_play.cpp  graph.hpp  instance.hpp  instance_manager.hpp  json.hpp  lock_free_queue.hpp  mpmc_queue.hpp  offline_backend.hpp  player.hpp  rt_check.hpp  rtaudio_backend.hpp  schedule.cpp  schedule.hpp  serialize.cpp  standard_nodes.hpp  tui.hpp  worker_pool.hpp  xrune.cpp  xrune.h  xrune_parallel_demo.cpp
src/galdr/: compile.hpp  lower.hpp  node_registry.hpp
src/galdr/parser/: ast.hpp  diagnostic.hpp  lexer.hpp  parser.hpp  token.hpp
src/node/: faust_lib.cpp  fft.hpp  multirate.hpp
src/node/faust/: faust_common.hpp  faust_jit.hpp  faust_static.hpp
src/util/: json.cpp
tests/: bench_gain.cpp  test_api.cpp  test_arena.cpp  test_events.cpp  test_faust_jit.cpp  test_faust_static.cpp  test_faustlib.cpp  test_fft.cpp  test_galdr_lower.cpp  test_galdr_parse.cpp  test_galdr_registry.cpp  test_instance.cpp  test_lang_arith.cpp  test_lang_faust.cpp  test_lang_lower.cpp  test_lang_out.cpp  test_lang_params.cpp  test_lang_parse.cpp  test_lang_registry.cpp  test_lifetime.cpp  test_multirate.cpp  test_nodes.cpp  test_offline.cpp  test_parallel.cpp  test_ports.cpp  test_routing.cpp  test_rt_safety.cpp  test_serialize.cpp  test_util.hpp
tools/: faustlib_scan.py
